; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/arm/extr_locks_arm.c_lck_mtx_lock.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/arm/extr_locks_arm.c_lck_mtx_lock.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i32 }

@memory_order_acquire_smp = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4
@LS_LCK_MTX_LOCK_ACQUIRE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @lck_mtx_lock(%struct.TYPE_7__* %0) #0 {
  %2 = alloca %struct.TYPE_7__*, align 8
  %3 = alloca i32, align 4
  store %struct.TYPE_7__* %0, %struct.TYPE_7__** %2, align 8
  %4 = load %struct.TYPE_7__*, %struct.TYPE_7__** %2, align 8
  %5 = call i32 @lck_mtx_verify(%struct.TYPE_7__* %4)
  %6 = load %struct.TYPE_7__*, %struct.TYPE_7__** %2, align 8
  %7 = call i32 @lck_mtx_check_preemption(%struct.TYPE_7__* %6)
  %8 = call i32 (...) @current_thread()
  store i32 %8, i32* %3, align 4
  %9 = load %struct.TYPE_7__*, %struct.TYPE_7__** %2, align 8
  %10 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %9, i32 0, i32 0
  %11 = load i32, i32* %3, align 4
  %12 = call i32 @LCK_MTX_THREAD_TO_STATE(i32 %11)
  %13 = load i32, i32* @memory_order_acquire_smp, align 4
  %14 = load i32, i32* @FALSE, align 4
  %15 = call i64 @atomic_compare_exchange(i32* %10, i32 0, i32 %12, i32 %13, i32 %14)
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %18

17:                                               ; preds = %1
  br label %23

18:                                               ; preds = %1
  %19 = load %struct.TYPE_7__*, %struct.TYPE_7__** %2, align 8
  %20 = load i32, i32* %3, align 4
  %21 = load i32, i32* @FALSE, align 4
  %22 = call i32 @lck_mtx_lock_contended(%struct.TYPE_7__* %19, i32 %20, i32 %21)
  br label %23

23:                                               ; preds = %18, %17
  ret void
}

declare dso_local i32 @lck_mtx_verify(%struct.TYPE_7__*) #1

declare dso_local i32 @lck_mtx_check_preemption(%struct.TYPE_7__*) #1

declare dso_local i32 @current_thread(...) #1

declare dso_local i64 @atomic_compare_exchange(i32*, i32, i32, i32, i32) #1

declare dso_local i32 @LCK_MTX_THREAD_TO_STATE(i32) #1

declare dso_local i32 @lck_mtx_lock_contended(%struct.TYPE_7__*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
